overflow quick fix

--- a/includes/_flex.scss
+++ b/includes/_flex.scss
@@ -11,9 +11,10 @@
   > div,
   > a,
   > .button,
-  > .input,
+  > .input
   {
     display: block;
+    overflow: hidden; // required for span issues
     flex-grow: 1
   }
 }
